# visual_foraging

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  asciidoctor-pdf.yml  attributes.adoc  book.adoc
docs/chapters/: 00-preface.adoc  01-introduction.adoc  02-installation.adoc  03-quickstart.adoc  99-appendix.adoc
opensesame_plugins/visual_foraging/: __init__.py
opensesame_plugins/visual_foraging/visual_foraging_pluging/: __init__.py  background_picker.py  background_selector.py  element_list.py  generator_selector.py  input_helpers.py  location_selector.py  patch_helpers.py  serialization_helpers.py  visual_foraging.py
