[tool.poetry]
name = "visual-foraging-opensesame-plugin"
version = "0.0.1"
description = "A visual foraging plugin for OpenSesame"
authors = ["Jan Tünnermann <jan.tuennermann@charlotte-fresenius-uni.de>"]
readme = ""
packages = [
    {include = "opensesame_plugins"},
]

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
